# CoreVDOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
src/core/: math_utils.h
src/dsl/: lexer.h  parser.h
src/ecs/: components.h
src/physics/: physics.cpp  physics.h
src/player/: player_camera.cpp  player_camera.h
src/renderer/: raylib_renderer.h  renderer.h
src/tests/: test_svo.cpp
src/ui/: hud.h
src/world/: cube.h  cube_physics.h  dual_contouring.h  svo.h
